Refactor input handling + update tests to puzzle examples
- Add Inputs helper (UTF-8 read, line iteration, blank-line split) and reuse it in app/Day05
- Fix Day05 blank-line splitting for CRLF inputs
- Simplify AdventOfCodeApplication file reading and avoid double-reading day05 input
- Align/rename tests: keep puzzle-example fixtures for days 1-5, add Inputs split tests, restore Day framework tests